emulator/tests/snapshots/diagnostics__compilation_invalid_register.snap
---
source: emulator/tests/diagnostics.rs
assertion_line: 165
expression: "check_full_pipeline_errors(\"main:\\n    jmp %c\")"
---
error: unknown register '%c', valid registers: %a, %b, %pc, %sp, %sr
  ┌─ /test.S:2:9
  │
2 │     jmp %c
  │         ^
